Updated README, added Java version to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 		</dependency>
 	</dependencies>
 	
-	
+	<properties>
+		<jdk.version>1.8</jdk.version>
+	</properties>
 	
 	<build>
 		<finalName>TrickleEmailer</finalName>
